--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "firebase": "^10.14.0",
     "i18next": "^23.16.8",
+    "mapbox-gl": "^3.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3"
